# yrhash

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
.github/workflows/: build.yml
src/: main.rs
tests/data/: hash.txt  test_file.txt
