[package]
name = "yrhash"
version = "1.0.0"
edition = "2021"
authors = ["Nobuo Miura"]
description = "Performs various hashing operations on files"
readme = "README.md"
license = "MIT"
build = "build.rs"

[dependencies]
clap = "4.5.1"
sha2 = "0.11.0-pre.3"
md5 = "0.7.0"
sha1 = "0.11.0-pre.3"
crc32fast = "1.4.0"
